# glance-dev-network

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  studio.bat  studio.command  studio.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: validate.yml
apps/3-cities-weather/: app.star  manifest.yaml
apps/asteroids-near-us/: app.star  manifest.yaml
apps/countdown/: app.star  manifest.yaml
apps/day-of-year/: app.star  manifest.yaml
apps/go-gators/: app.star  manifest.yaml
apps/hello-jay/: app.star  manifest.yaml
apps/hello-world/: app.star  manifest.yaml
apps/local-aqi/: app.star  manifest.yaml
apps/local-fires/: app.star  manifest.yaml
apps/message/: app.star  manifest.yaml
apps/moon-phase/: app.star  manifest.yaml
apps/nearby-aircraft/: app.star  manifest.yaml
apps/now-playing/: app.star  manifest.yaml
apps/ported-advice/: app.star  manifest.yaml
apps/ported-analogclock/: app.star  manifest.yaml
apps/ported-apiimage/: app.star  manifest.yaml
apps/ported-bibleverse/: app.star  manifest.yaml
apps/ported-bigclock/: app.star  manifest.yaml
apps/ported-binaryclock/: app.star  manifest.yaml
apps/ported-biorhythm/: app.star  manifest.yaml
apps/ported-bofhquotes/: app.star  manifest.yaml
apps/ported-catfact/: app.star  manifest.yaml
gdn/: __init__.py  app.py  canvas.py  check.py  cli.py  colors.py  draw_helpers.py  fonts.py  preview.py  rgb565.py  runner.py  scene.py  studio.py  studio_gif.py  submit.py  translate.py  yaml_generator.py
server/: README.md  __init__.py  server.py
(+39 files in other folders)
